# ghost-bank

./: .gitignore  diagnostic_asymmetric_forgetting.py  diagnostic_buffer_staleness.py  diagnostic_comprehensive_sweep.py  diagnostic_debt_trajectory.py  pyproject.toml  requirements.txt  run_all.py  suggestions.md
configs/: config.yaml
configs/bank/: ed_gb.yaml  pid_gb.yaml  static.yaml
configs/data/: cifar100.yaml  cifar_lt.yaml  synthetic.yaml
configs/method/: class_balanced.yaml  ed_gb.yaml  focal_loss.yaml  pid_gb.yaml  static_bank.yaml
configs/model/: cifar_resnet.yaml  classifier.yaml  resnet.yaml
configs/output/: default.yaml  formats.yaml
configs/runner/: ablation.yaml  baseline.yaml  cifar100.yaml  shift.yaml  stress_test.yaml  synthetic.yaml
configs/training/: cifar100.yaml  default.yaml  lightning.yaml
docs/: clean_problem_statement.md  final_DRKD_architecture.md  final_experiment_protocol.md  final_research_execution_plan.md  finalized_research_idea.md  formal_hypothesis.md  formal_math_definition.md  literature_review.md  method_specification.md  research_conclusion.md  research_gap_and_contribution.md  suggestion1.md  suggestions.md  top_tier_validation_plan.md
docs/implemention/: datasset_plan.md  final_implementation_plan.md  ledger.md
docs/logs/: PID_DDC.md  icarrl_logs.md  (+1 more)
src/loss/: base.py  (+1 more)
tests/: test_allocator.py  test_bank_strategies.py  test_exposure.py  test_losses.py  test_methods.py  test_output_manager.py  test_pid_controller.py  test_retrieval.py  test_runners.py
verification/: verify_bank.py  verify_formal_definition.py
(+109 files in other folders)
