[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-bank"
version = "0.1.0"
description = "Exposure-Debt Ghost Bank — closed-loop minority-memory for imbalanced learning"
authors = [
    {name = "Ghost Bank Researchers"},
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
data = [
    "huggingface_hub>=0.23.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
